syntax fixes